social share button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -233,9 +233,7 @@
   <a class="js-social-share twitter button-2 w-button" href="https://twitter.com/intent/tweet?text=“The 8th PRME ASIA FORUM”&url=http://prmeasia.spjimr.org/&via=twitter" target="_blank" style="background-color: #1DA1F2; border-radius: 50%; padding: 0px 8px 0px 8px !important; font-size: 22px;margin-right: 0px !important;"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 </a>
 
-  <div class="fb-share-button button-2 w-button" data-href="http://prmeasia.spjimr.org/" data-layout="button" data-size="small" data-mobile-iframe="true" style="background-color: #f2f2f2; margin-right: 0px !important; margin-top: 7px;">
-    <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fprmeasia.spjimr.org%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a>
-  </div>
+ <div class="fb-share-button button-2 w-button " data-href="http://prmeasia.spjimr.org/" data-layout="button" data-size="small" data-mobile-iframe="true" style="background-color: #f2f2f2; margin-right: 0px !important; margin-top: 7px;" fb-xfbml-state="rendered" fb-iframe-plugin-query="app_id=&amp;container_width=62&amp;href=http%3A%2F%2Fprmeasia.spjimr.org%2F&amp;layout=button&amp;locale=en_GB&amp;mobile_iframe=true&amp;sdk=joey&amp;size=small"><span style="vertical-align: bottom; width: 59px; height: 20px;"><iframe name="f3d311240c23fe4" width="1000px" height="1000px" frameborder="0" allowtransparency="true" allowfullscreen="true" scrolling="no" allow="encrypted-media" title="fb:share_button Facebook Social Plugin" src="https://web.facebook.com/v3.1/plugins/share_button.php?app_id=&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fconnect%2Fxd_arbiter%2Fr%2Fmp2v3DK3INU.js%3Fversion%3D42%23cb%3Df2e9f4d01825ed%26domain%3Dlocalhost%26origin%3Dhttp%253A%252F%252Flocalhost%253A3000%252Ff24f020b69e5158%26relation%3Dparent.parent&amp;container_width=62&amp;href=http%3A%2F%2Fprmeasia.spjimr.org%2F&amp;layout=button&amp;locale=en_GB&amp;mobile_iframe=true&amp;sdk=joey&amp;size=small" style="border: none; visibility: visible; width: 59px; height: 20px;" class=""></iframe></span></div>
 </div>
 
 
