--- a/app/views/home/fees.html.erb
+++ b/app/views/home/fees.html.erb
@@ -113,7 +113,7 @@ td {
   text-align:left;
   vertical-align:middle;
   font-weight:300;
-  font-size:18px;
+  font-size:16px;
   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
   border-right: 1px solid #C1C3D1;
 }
@@ -304,7 +304,322 @@ td.text-right {
 
 
             </div>
-            <!-- <button id="btnSubmit" class="button" style="margin-top: 20px;float: right"><span>Make a Payment</span></button> -->
+            <div class="row-2 w-row" style="margin: 20px;"> 
+              <div class="column-6 w-col w-col-6" style="padding-top: 10px;">
+                 <select id="YourSelectComponentID">
+                    <option value="8000">Industry Participant</option>
+                    <option value="60001">Members of UN Global Compact Network</option>
+                    <option value="60002">Academics</option>
+                    <option value="2000">Students</option>
+                    <option value="1500">Social Sector</option>
+                 </select>
+              </div>
+              <div class="column-6 w-col w-col-6">
+                <button id="btnSubmit" class="button" style="margin-top: 0px;float: right"><span>Make a Payment</span></button>
+                 <script type="text/javascript" src="https://www.paynimo.com/Paynimocheckout/server/lib/checkout.js"></script>
+                <script type="text/javascript">
+
+
+                  document.getElementById('btnSubmit').onclick = function() {
+
+                    if(document.getElementById("YourSelectComponentID").value == 8000)
+                    {
+                        $(document).ready(function() {
+            function handleResponse(res) {
+                if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0300') {
+                    // success block
+                } else if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0398') {
+                    // initiated block
+                } else {
+                    // error block
+                }
+            };
+
+            $(document).off('click', '#btnSubmit').on('click', '#btnSubmit', function(e) {
+                e.preventDefault();
+
+                var configJson = {
+                    'tarCall': false,
+                    'features': {
+                        'showPGResponseMsg': true,
+                        'enableExpressPay': true,
+                        'enableNewWindowFlow': true    //for hybrid applications please disable this by passing false
+                    },
+                    'consumerData': {
+                        'deviceId': 'WEBSH2', //possible values 'WEBSH1', 'WEBSH2' and 'WEBMD5'
+                        'token': '<%= @token1 %>',
+                        'returnUrl': '<%= payments_path %>',
+                        'responseHandler': handleResponse,
+                        'paymentMode': 'all',
+                        'merchantLogoUrl': '../home1.jpg',  //provided merchant logo will be displayed
+                        'disclaimerMsg': "INDUSTRY PARTICIPANT",
+                        'merchantId': 'L522',
+                        'currency': 'INR',
+                        'consumerId': '1',
+                        'consumerMobileNo': '9591355172',
+                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
+                        'items': [{
+                            'itemId': 'PRME',
+                            'amount': '8000',
+                            'comAmt': '0'
+                        }],
+                        'customStyle': {
+                            'PRIMARY_COLOR_CODE': '#333a56',   //merchant primary color code
+                            'SECONDARY_COLOR_CODE': '#FFFFFF',   //provide merchant's suitable color code
+                            'BUTTON_COLOR_CODE_1': '#52658f',   //merchant's button background color code
+                            'BUTTON_COLOR_CODE_2': '#FFFFFF'   //provide merchant's suitable color code for button text
+                        }
+                    }
+                };
+
+                $.pnCheckout(configJson);
+                if(configJson.features.enableNewWindowFlow){
+                    pnCheckoutShared.openNewWindow();
+                }
+            });
+        });
+                    } else if(document.getElementById("YourSelectComponentID").value == 60001) {
+                        $(document).ready(function() {
+            function handleResponse(res) {
+                if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0300') {
+                    // success block
+                } else if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0398') {
+                    // initiated block
+                } else {
+                    // error block
+                }
+            };
+
+            $(document).off('click', '#btnSubmit').on('click', '#btnSubmit', function(e) {
+                e.preventDefault();
+
+                var configJson = {
+                    'tarCall': false,
+                    'features': {
+                        'showPGResponseMsg': true,
+                        'enableExpressPay': true,
+                        'enableNewWindowFlow': true    //for hybrid applications please disable this by passing false
+                    },
+                    'consumerData': {
+                        'deviceId': 'WEBSH2', //possible values 'WEBSH1', 'WEBSH2' and 'WEBMD5'
+                        'token': '<%= @token2 %>',
+                        'returnUrl': '<%= payments_path %>',
+                        'responseHandler': handleResponse,
+                        'paymentMode': 'all',
+                        'merchantLogoUrl': '../home1.jpg',  //provided merchant logo will be displayed
+                        'disclaimerMsg': "Members of UN Global Compact Network",
+                        'merchantId': 'L522',
+                        'currency': 'INR',
+                        'consumerId': '1',
+                        'consumerMobileNo': '9591355172',
+                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
+                        'items': [{
+                            'itemId': 'PRME',
+                            'amount': '6000',
+                            'comAmt': '0'
+                        }],
+                        'customStyle': {
+                            'PRIMARY_COLOR_CODE': '#333a56',   //merchant primary color code
+                            'SECONDARY_COLOR_CODE': '#FFFFFF',   //provide merchant's suitable color code
+                            'BUTTON_COLOR_CODE_1': '#52658f',   //merchant's button background color code
+                            'BUTTON_COLOR_CODE_2': '#FFFFFF'   //provide merchant's suitable color code for button text
+                        }
+                    }
+                };
+
+                $.pnCheckout(configJson);
+                if(configJson.features.enableNewWindowFlow){
+                    pnCheckoutShared.openNewWindow();
+                }
+            });
+        });
+                    } else if(document.getElementById("YourSelectComponentID").value == 60002) {
+                        $(document).ready(function() {
+            function handleResponse(res) {
+                if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0300') {
+                    // success block
+                } else if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0398') {
+                    // initiated block
+                } else {
+                    // error block
+                }
+            };
+
+            $(document).off('click', '#btnSubmit').on('click', '#btnSubmit', function(e) {
+                e.preventDefault();
+
+                var configJson = {
+                    'tarCall': false,
+                    'features': {
+                        'showPGResponseMsg': true,
+                        'enableExpressPay': true,
+                        'enableNewWindowFlow': true    //for hybrid applications please disable this by passing false
+                    },
+                    'consumerData': {
+                        'deviceId': 'WEBSH2', //possible values 'WEBSH1', 'WEBSH2' and 'WEBMD5'
+                        'token': '<%= @token3 %>',
+                        'returnUrl': '<%= payments_path %>',
+                        'responseHandler': handleResponse,
+                        'paymentMode': 'all',
+                        'merchantLogoUrl': '../home1.jpg',  //provided merchant logo will be displayed
+                        'disclaimerMsg': "Academics",
+                        'merchantId': 'L522',
+                        'currency': 'INR',
+                        'consumerId': '1',
+                        'consumerMobileNo': '9591355172',
+                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
+                        'items': [{
+                            'itemId': 'PRME',
+                            'amount': '6000',
+                            'comAmt': '0'
+                        }],
+                        'customStyle': {
+                            'PRIMARY_COLOR_CODE': '#333a56',   //merchant primary color code
+                            'SECONDARY_COLOR_CODE': '#FFFFFF',   //provide merchant's suitable color code
+                            'BUTTON_COLOR_CODE_1': '#52658f',   //merchant's button background color code
+                            'BUTTON_COLOR_CODE_2': '#FFFFFF'   //provide merchant's suitable color code for button text
+                        }
+                    }
+                };
+
+                $.pnCheckout(configJson);
+                if(configJson.features.enableNewWindowFlow){
+                    pnCheckoutShared.openNewWindow();
+                }
+            });
+        });
+                    } else if(document.getElementById("YourSelectComponentID").value == 2000) {
+                        $(document).ready(function() {
+            function handleResponse(res) {
+                if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0300') {
+                    // success block
+                } else if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0398') {
+                    // initiated block
+                } else {
+                    // error block
+                }
+            };
+
+            $(document).off('click', '#btnSubmit').on('click', '#btnSubmit', function(e) {
+                e.preventDefault();
+
+                var configJson = {
+                    'tarCall': false,
+                    'features': {
+                        'showPGResponseMsg': true,
+                        'enableExpressPay': true,
+                        'enableNewWindowFlow': true    //for hybrid applications please disable this by passing false
+                    },
+                    'consumerData': {
+                        'deviceId': 'WEBSH2', //possible values 'WEBSH1', 'WEBSH2' and 'WEBMD5'
+                        'token': '<%= @token4 %>',
+                        'returnUrl': '<%= payments_path %>',
+                        'responseHandler': handleResponse,
+                        'paymentMode': 'all',
+                        'merchantLogoUrl': '../home1.jpg',  //provided merchant logo will be displayed
+                        'disclaimerMsg': "Students",
+                        'merchantId': 'L522',
+                        'currency': 'INR',
+                        'consumerId': '1',
+                        'consumerMobileNo': '9591355172',
+                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
+                        'items': [{
+                            'itemId': 'PRME',
+                            'amount': '2000',
+                            'comAmt': '0'
+                        }],
+                        'customStyle': {
+                            'PRIMARY_COLOR_CODE': '#333a56',   //merchant primary color code
+                            'SECONDARY_COLOR_CODE': '#FFFFFF',   //provide merchant's suitable color code
+                            'BUTTON_COLOR_CODE_1': '#52658f',   //merchant's button background color code
+                            'BUTTON_COLOR_CODE_2': '#FFFFFF'   //provide merchant's suitable color code for button text
+                        }
+                    }
+                };
+
+                $.pnCheckout(configJson);
+                if(configJson.features.enableNewWindowFlow){
+                    pnCheckoutShared.openNewWindow();
+                }
+            });
+        });
+                    } else if(document.getElementById("YourSelectComponentID").value == 1500) {
+                        $(document).ready(function() {
+            function handleResponse(res) {
+                if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0300') {
+                    // success block
+                } else if (typeof res != 'undefined' && typeof res.paymentMethod != 'undefined' && typeof res.paymentMethod.paymentTransaction != 'undefined' && typeof res.paymentMethod.paymentTransaction.statusCode != 'undefined' && res.paymentMethod.paymentTransaction.statusCode == '0398') {
+                    // initiated block
+                } else {
+                    // error block
+                }
+            };
+
+            $(document).off('click', '#btnSubmit').on('click', '#btnSubmit', function(e) {
+                e.preventDefault();
+
+                var configJson = {
+                    'tarCall': false,
+                    'features': {
+                        'showPGResponseMsg': true,
+                        'enableExpressPay': true,
+                        'enableNewWindowFlow': true    //for hybrid applications please disable this by passing false
+                    },
+                    'consumerData': {
+                        'deviceId': 'WEBSH2', //possible values 'WEBSH1', 'WEBSH2' and 'WEBMD5'
+                        'token': '<%= @token5 %>',
+                        'returnUrl': '<%= payments_path %>',
+                        'responseHandler': handleResponse,
+                        'paymentMode': 'all',
+                        'merchantLogoUrl': '../home1.jpg',  //provided merchant logo will be displayed
+                        'disclaimerMsg': "Social Sector",
+                        'merchantId': 'L522',
+                        'currency': 'INR',
+                        'consumerId': '1',
+                        'consumerMobileNo': '9591355172',
+                        'consumerEmailId': 'abhijeet428001@gmail.com',
+                        'txnId': '<%= @txnid %>',   //Unique merchant transaction ID
+                        'items': [{
+                            'itemId': 'PRME',
+                            'amount': '1500',
+                            'comAmt': '0'
+                        }],
+                        'customStyle': {
+                            'PRIMARY_COLOR_CODE': '#333a56',   //merchant primary color code
+                            'SECONDARY_COLOR_CODE': '#FFFFFF',   //provide merchant's suitable color code
+                            'BUTTON_COLOR_CODE_1': '#52658f',   //merchant's button background color code
+                            'BUTTON_COLOR_CODE_2': '#FFFFFF'   //provide merchant's suitable color code for button text
+                        }
+                    }
+                };
+
+                $.pnCheckout(configJson);
+                if(configJson.features.enableNewWindowFlow){
+                    pnCheckoutShared.openNewWindow();
+                }
+            });
+        });
+                    }
+
+
+
+
+
+
+                  };
+                 
+                </script>
+              </div>
+                 
+
+<script type="text/javascript">
+        
+    </script>
+            </div>
           </div>
         </div>
       </div>
