--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -95,7 +95,7 @@
 <%end%> 
   <div>
     <div class="container-4 w-container">
-      <div class="card" style=" height: 580px !important;font-family: 'Roboto Condensed', sans-serif;">
+      <div class="card" style=" height: 650px !important;font-family: 'Roboto Condensed', sans-serif;">
         <div>
           <h3 class="heading" style="font-family: 'Roboto Condensed', sans-serif; padding-top: 10px">Sign up</h3>
         </div>
@@ -176,9 +176,21 @@
                     <%= f.text_field :website_url ,class: "form-control required w-input", id:"name-field",placeholder:"Website URL", :required => false, style:"margin-left:10px;"%>
                   </div>
                   <div class="column-3 w-col w-col-6">
-                    <h6 class="heading-6" style="text-align: left !important; margin: 0px 0px 0px 10px; font-size: 14px;">Where did you hear about the conference?</h6>
+                    
+                    <h6 class="heading-6" style="text-align: left !important; margin: 0px 0px 0px 10px; font-size: 14px;">Country</h6>
+                    <%= f.country_select :country, {selected: "IN"}, {class: "form-control required w-input margin-on-select", :style => "margin-left:10px;"} %>
+                  
+
+                    
+                  </div>
+                </div>
+                <div class="w-row">
+                  <div class="column-3 w-col w-col-3"></div>
+                  <div class="column-6 w-col w-col-6">
+                  <h6 class="heading-6" style="text-align: left !important; margin: 0px 0px 0px 10px; font-size: 14px;">Where did you hear about the conference?</h6>
                     <%= f.select :promotion, options_for_select(['Website', 'E-mailers', 'Social Media','Colleagues', 'Others']), {}, { class: "form-control required w-input margin-on-select", style: "margin-left:10px;"}%>
                   </div>
+                  <div class="column-3 w-col w-col-3"></div>
                 </div>
               </div>
               <div>
