--- a/app/views/home/eac.html.erb
+++ b/app/views/home/eac.html.erb
@@ -1,4 +1,11 @@
 
+ 
+
+
+
+email after payment
+right side me kahin pe green saying that payment 
+
 <% content_for :styles do %>
     <style type="text/css">
         .heading-tittle h2 {
