--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -784,7 +784,7 @@ input[type='checkbox'] {
             <div class="w-col w-col-3" style="text-align: center"><img src="../ProfAnilKulkarni.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 22px;font-family: 'Roboto Condensed', sans-serif;">Prof. Anil Kulkarni</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">(kulkarni@spjimr.org)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">INNOVATING ON PEDAGOGY AND CURRICULUM</p>
               
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Adjunct Professor
               </h5>
@@ -815,7 +815,7 @@ input[type='checkbox'] {
             <div class="w-col w-col-3" style="text-align: center"><img src="../DrAnshulVerma.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 22px;font-family: 'Roboto Condensed', sans-serif;">Dr. Anshul Verma</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">(anshul.verma@spjimr.org)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">MANAGEMENT EDUCATION FOR THE FUTURE</p>
               
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Associate Professor (Finance)
               </h5>
@@ -853,7 +853,7 @@ He has more than 16 years of experience in teaching, training and research in ar
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/DrDivyaSinghal.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 22px;font-family: 'Roboto Condensed', sans-serif;">Dr. Divya Singhal</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">(divyasinghal@gim.ac.in)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px; color:#6c757d">ENGAGING WITH SDGs: THE LOCAL EXPERIENCES</p>
               
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Associate Professor (General Management)
               </h5>
@@ -862,7 +862,7 @@ He has more than 16 years of experience in teaching, training and research in ar
           </div>
           <div class="row-5 w-row">
             <div class="w-col w-col-12">
-                                  <div class="wrap-collabsible4" style="margin-top: 21px;">
+                                  <div class="wrap-collabsible4" style="margin-top: 43px;">
   <input id="collapsible4" class="toggle4" type="checkbox">
   <label for="collapsible4" class="lbl-toggle4">About Dr. Divya Singhal</label>
   <div class="collapsible-content4">
@@ -886,7 +886,7 @@ Dr. Divya was a founder member of the coordination committee of institute’s So
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/ProfJankiAndharia.jpeg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; font-family: 'Roboto Condensed', sans-serif;">Prof. Janki Andharia</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">(andharia@tiss.edu)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">EXTREME EVENTS, <br> DISASTERS AND BUILDING RESILIENCE</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Dean - Jamsetji Tata School of Disaster Studies <br>
 Chairperson - Centre for Disasters and Development, Jamsetji Tata School of Disaster Studies 
               </h5>
@@ -921,7 +921,7 @@ She has been involved in national and state level policy making work and has had
             <div class="w-col w-col-3" style="text-align: center"><img src="../Kartik_Dave6.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; font-family: 'Roboto Condensed', sans-serif;">Prof. Kartik Dave</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">(kartik@aud.ac.in)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">MANAGEMENT EDUCATION FOR THE FUTURE</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor (Marketing and Strategy)
               </h5>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">mbedkar University, Delhi</h5>
@@ -955,7 +955,7 @@ She has been involved in national and state level policy making work and has had
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/DrKKuperanVishwanathan.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important;font-family: 'Roboto Condensed', sans-serif;">Dr. K Kuperan Vishwanathan</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ; color:#6c757d!important">(kuperan@uum.edu.my)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ; color:#6c757d!important">INEQUALITY - THE ROLE OF BUSINESS</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor and Head of Financial Analysis and Policy Group
               </h5>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Othman Yeop Abdullah Graduate School of Business Malaysia</h5>
@@ -980,7 +980,7 @@ She has been involved in national and state level policy making work and has had
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/DrPamsyHui.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 0% 0%; text-align: center;"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important;font-family: 'Roboto Condensed', sans-serif;">Dr. Pamsy Hui</h4>
-              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(pamsy.hui@polyu.edu.hk)</p>
+              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">SUSTAINABILITY AND DEVELOPMENT</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">MBA Programme Director 
               </h5>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">The Hong Kong Polytechnic University</h5>
@@ -1014,7 +1014,7 @@ She has been involved in national and state level policy making work and has had
             <div class="w-col w-col-3" style="text-align: center"><img src="../DrRadhaSharma.png" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 0% 0%; text-align: center;"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important;font-family: 'Roboto Condensed', sans-serif;">Dr. Radha Sharma</h4>
-              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(radha@mdi.ac.in)</p>
+              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">INNOVATING ON PEDAGOGY AND CURRICULUM</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor (Organizational Behavior) 
               </h5>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">MDI Gurgaon</h5>
@@ -1047,7 +1047,7 @@ She has been involved in national and state level policy making work and has had
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/ProfSanrtoshKumar.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; font-family: 'Roboto Condensed', sans-serif;">Prof. Santosh Kumar</h4>
-              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">(Santosh.kumar@aurouniversity.edu.in; kumar29466@yahoo.co.in)</p>
+              <p style="text-align: center; font-size: 14px;font-family: 'Roboto Condensed', sans-serif;color:#6c757d!important ">ENGAGING WITH SDGs: THE LOCAL EXPERIENCES</p>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Head, Public Policy
               </h5>
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">School of Liberal Arts and Human Sciences
@@ -1055,7 +1055,7 @@ AURO University</h5>
             </div>
           </div>
 
-          <div class="wrap-collabsible1">
+          <div class="wrap-collabsible1" style="margin-top: 20px;">
   <input id="collapsible1" class="toggle1" type="checkbox">
   <label for="collapsible1" class="lbl-toggle1">About Prof. Santosh Kumar</label>
   <div class="collapsible-content1">
@@ -1077,7 +1077,7 @@ As a specialist in the field of Public Policy, he has been engaged with Social A
             <div class="w-col w-col-3" style="text-align: center"><img src="../track/ProfSatyajitMajumdar.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px; object-fit: cover; object-position: 50% 0%"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; font-family: 'Roboto Condensed', sans-serif;">Prof. Satyajit Majumdar</h4>
-              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">(satyajit@tiss.edu)</p>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px;color:#6c757d!important ">SOCIAL ENTREPRENEURSHIP</p>
               
               <h5 class="heading-10" style="font-size: 16px;font-family: 'Roboto Condensed', sans-serif;">Professor and Chairperson,
 Center for Social Entrepreneurship
