--- a/app/views/home/application.html.erb
+++ b/app/views/home/application.html.erb
@@ -179,6 +179,151 @@ td.text-center {
 td.text-right {
   text-align: right;
 }*/
+
+
+     .button {
+  border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.btn {
+    border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+    .button {
+  border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+     .button1 {
+  border-radius: 4px;
+  background-color: #a9a9a9 !important;
+  border: none;
+  color: #3a3a3a;
+  text-align: center;
+  font-size: 14px;
+  padding: 10px;
+  /*width: 200px;*/
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.btn {
+    border-radius: 4px;
+  background-color: #3ec9cb !important;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 18px;
+  padding: 10px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+
+.button1 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button1 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button1:hover span {
+  padding-right: 25px;
+}
+
+.button1:hover span:after {
+  opacity: 1;
+  right: 0;
+}
     </style>
 <%end%> 
 <div style="margin-bottom: 100px;">
@@ -273,7 +418,7 @@ td.text-right {
           </div>
         </div>
       </div>
-            <div class="" style="padding: 10px; text-align: justify;">
+            <div class="" id="register" style="padding: 10px; text-align: justify;">
         <h4 class="heading-8" style="text-align: left;font-family: 'Roboto Condensed', sans-serif; "> <p style="text-decoration: underline; text-decoration-color: #3b1e9a;">FEES :</p>
         </h4>
         <div class="card-track" style="padding: 10px;">
@@ -293,25 +438,38 @@ td.text-right {
             </tbody>
             </table>  
             <div class="row-2 w-row" style="margin: 20px;"> 
+              <% if !current_user %>
+              <div class="column-12 w-col w-col-12" style="text-align: center">
+                <h4 class="heading-8" style="font-family: 'Roboto Condensed', sans-serif; font-size: 18px"> <p style=" display: inline"> 
+                Please </p>
+      <%= link_to new_user_session_path,class:"button1" do %>
+        <span> Log In </span> 
+      <% end %>
+      /
+      <%= link_to new_user_registration_path,class:"button1" do%>
+      <span> Register</span> 
+      <%end%>
+      <p style=" display: inline">
+     to register for doctoral colloquium.
+              </p></h4>
+            </div>
+            <%elsif%>
+            <div class="column-12 w-col w-col-12" style="padding-top: 10px;">
+                <p style="text-decoration: underline; text-decoration-color: #3b1e9a; font-size: 18px;">SELECT CATEGORY OF PARTICIPATION</p>
+              </div>
               <div class="column-3 w-col w-col-3"></div>
-              <div class="column-4 w-col w-col-4" style="padding-top: 13px; border-right: none">
+              <div class="column-5 w-col w-col-5" style="padding-top: 13px; border-right: none">
                  <select id="YourSelectComponentID">
                     <option value="1000">For attending Doctoral Colloquium</option>
                     <option value="3000">For attending Doctoral Colloquium and 2 day forum</option>
-                    
-                    
-                    
                  </select>
               </div>
               <div class="column-2 w-col w-col-2" style="padding-top: 0px; border-right: none">
                 <button id="btnSubmit" class="button"><span>Make a Payment</span></button>
               </div>
-              <div class="column-3 w-col w-col-3"></div>
+              <div class="column-2 w-col w-col-2" style="border-right: none"></div>
+              <%end%>
             </div>
-            <% if current_user %>
-            
-            
-            <%end%>
     
     <script type="text/javascript" src="https://www.paynimo.com/Paynimocheckout/server/lib/checkout.js"></script>
 
