--- a/app/views/home/hotels.html.erb
+++ b/app/views/home/hotels.html.erb
@@ -17,7 +17,7 @@
 }
 
 .all_btn {
-    background-color: #3a3a3a;
+    background-color: #6e6e6e;
     border: none;
     color: white;
     /*padding: 12px 16px;*/
@@ -30,11 +30,11 @@
 
 /* Darker background on mouse-over */
 .all_btn:hover {
-    background-color: #6e6e6e;
+    background-color: #d3d3d3;
 }
 
 .all_btn1 {
-    background-color: #3a3a3a;
+    background-color: #6e6e6e;
     border: none;
     color: white;
     /*padding: 12px 16px;*/
@@ -42,6 +42,10 @@
     cursor: auto;
     border-radius: 50%;
     text-align: center;
+}
+
+.w-col-9 {
+      width: 100%;
 }
 
 
@@ -67,17 +71,17 @@
               <h4 class="heading-8" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Sun n Sand</h4>
               <h5 class="heading-10" style="text-align: left !important;font-family: 'Roboto Condensed', sans-serif;">Location : Juhu, Vile Parle
               </h5>
-              <div class="row-5 w-row" style="margin-bottom: 10px; text-align: center">
+              <div class="row-5 w-row" style="margin-bottom: 10px;">
 
-                <div class="column-4 w-col w-col-4" style="text-align: center">
+                <div class="column-4 w-col w-col-4" >
                   <button class="all_btn1" style="padding:20px 12px 0px 12px;"> <p style="font-size: 10px">3.2 KMS </p></button>
                 </div>
-                <div class="column-4 w-col w-col-4" style="text-align: center">
+                <div class="column-4 w-col w-col-4">
                   <a href="http://www.sunnsandhotel.com/" target="_blank">
                   <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
                   </a>
                 </div>
-                <div class="column-4 w-col w-col-4" style="text-align: center; ">
+                <div class="column-4 w-col w-col-4" >
                   <a href="https://goo.gl/maps/RpVZvxgQgVK2" target="_blank">
                   <button class="all_btn" style="padding: 12px 13px 10px 13px;"><i class="material-icons" style="font-size: 33px;">place</i></button>
                   </a>
@@ -634,7 +638,7 @@
                 </div>
                 <div class="column-4 w-col w-col-4">
                   <a href="http://www.ontimeapartments.com/" target="_blank">
-                                    </a>
+                                    <button class="all_btn" style="padding: 14px 18px 14px 18px;"><i class="fa fa-globe" style="font-size: 32px;"></i></button>
                   </a>
                 </div>
                 <div class="column-4 w-col w-col-4">
